@@ -168,7 +168,7 @@ void request(int req) {
 			return;
 		}
 		arch_connect(const_cast<const char *>(shmem->strs[0]), const_cast<const char *>(shmem->strs[1]));
-		break;
+		return;
 	CASE(CMD_RECONNECT)
 		if (arch_fds() != 0) {
 			debug("Unexpected reconnect");
