@@ -1,6 +1,6 @@
-\" franklin.8.ronn - manual page for franklin
+\" franklin.8 - manual page for franklin
 \" Copyright 2014-2016 Michigan Technological University
-\" Copyright 2016-2018 Bas Wijnen <wijnen@debian.org>
+\" Copyright 2016-2019 Bas Wijnen <wijnen@debian.org>
 \" Author: Bas Wijnen <wijnen@debian.org>
 \"
 \" This program is free software: you can redistribute it and/or modify
