@@ -1,3 +1,5 @@
+# Depends: proxy proxy_http proxy_html proxy_wstunnel
+
 ProxyPreserveHost On
 
 Redirect "/franklin" "/franklin/"
